# farrenzos_garbage

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
docs/images/: image_licences.md
example_workflows/: 02_SDXL_Simple.json  03_zImageTurbo.json  WD14_Tagger.json
locales/en/: nodeDefs.json
models/wd14_v3/: wd-eva02-large-tagger-v3.csv
nodes/: __init__.py  _fg_helperfunctions.py  fg_CLIP_text_encode.py  fg_WD14.py  fg_advanced_ipadapter.py  fg_advanced_ksampler.py  fg_anima_text_encoder.py  fg_batch_conditioning.py  fg_controlnet.py  fg_coordinates_box_fill.py  fg_empty_latent.py  fg_image_scale.py  fg_lab_color_transfer.py  fg_load_image.py  fg_load_vae.py  fg_lora_loader.py  fg_min_max.py  fg_model_reference.py  fg_ollama.py  fg_purge_vram.py  fg_save_image.py  fg_show_text.py  fg_telegram_notice.py  fg_upscale_model.py
web/js/: appearance.js  fg_CLIP_text_encode.js  fg_dynamic_lora_loader.js  fg_empty_latent.js  fg_ollama.js  fg_show_text.js
